# DuplicateFileHandleAsAdmin

./: DuplicateFileHandleAsAdmin.sln  props.props
DuplicateFileHandleAsAdmin/: DuplicateFileHandleAsAdmin.cpp  DuplicateFileHandleAsAdmin.vcxproj  DuplicateFileHandleAsAdmin.vcxproj.filters
client/: Cargo.toml
client/src/: main.rs
