[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interprocess = "1.2.1"

[dependencies.windows]
version = "0.48.0"
features = [
	"Win32_UI_Shell",
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_Diagnostics_Debug",
]
